# micah-pytools

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: PyTools_QOL.yml  bug_report.md  feature_request.md  pylint.yml
src/PyTools_QOL/: __init__.py  execution_time.py
src/pytools-qol/: execution_time.py
tests/: __init__.py  test_execution_time.py
